# txline-predict

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
apps/web/: .env.example  next.config.ts  package.json  vercel.json
apps/web/scripts/: dev-fresh.js
apps/web/src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
apps/web/src/app/agents/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/components/: AbstractLinesBackground.tsx  AgentArena.tsx  BetCelebrationProvider.tsx  BetModal.tsx  BetPanel.tsx  ClientShell.tsx  DepositButton.tsx  Header.tsx  LiveFeed.tsx  LogoMark.tsx  MarketActions.tsx  MarketCard.tsx  MarketSection.tsx  MarketsBrowser.tsx  MatchCard.tsx  Modal.tsx  OutcomeColorLegend.tsx  SharpMovementAgent.tsx  SolanaProviders.tsx  WalletConnectButton.tsx  WalletDashboard.tsx  WorldCupHero.tsx
apps/web/src/hooks/: TxLineStreamProvider.tsx  useTxLineLiveStats.ts  useUsdcBalance.ts  useUserPosition.ts  useWalletDashboard.ts
apps/web/src/lib/: betting.ts  competitions.ts  demo-data.ts  markets.ts  outcome-colors.ts  settlement-server.ts  site.ts  txline.ts
docs/: DEPLOY_PROGRAM.md  TECHNICAL.md  VERCEL.md
platform/: DEPLOYMENT.md  README.md
programs/predict-market/: Cargo.toml  Xargo.toml
programs/predict-market/src/: lib.rs  txline_cpi.rs
scripts/: check-markets.ts  debug-simulate.ts  deploy-devnet.sh  fund-agents.ts  fund-devnet.ts  generate-platform-wallet.ts  run-local-validator.sh  setup-local-dev.sh  setup-txline-access.ts  simulate-bet.ts  tsconfig.json  wait-and-deploy-devnet.sh
(+20 files in other folders)
